fix missing variable

--- a/templates/email/index.html.twig
+++ b/templates/email/index.html.twig
@@ -21,7 +21,7 @@
                 <td>{{ email.alias }}</td>
                 <td>
                     {% for tag in email.tags %}
-                        <span class="badge badge-pill badge-secondary">{{ site }}</span>
+                        <span class="badge badge-pill badge-secondary">{{ tag }}</span>
                     {% endfor %}
                 </td>
                 <td>
