--- a/templates/email/new.html.twig
+++ b/templates/email/new.html.twig
@@ -10,7 +10,16 @@
 {% block content_body %}
     {{ form_start(form) }}
     {{ form_row(form.target) }}
-    {{ form_row(form.alias) }}
+
+    <div class="form-group">
+        {{ form_label(form.alias) }}
+        <div class="input-group">
+            {{ form_widget(form.alias) }}
+            <div class="input-group-append">
+                <span class="input-group-text" id="input-append-alias"></span>
+            </div>
+        </div>
+    </div>
     {{ form_row(form.tags) }}
     <div class="row">
         <div class="col-sm-6">
@@ -26,6 +35,7 @@
 {% block javascripts %}
     {{ parent() }}
     <script src="https://cdn.jsdelivr.net/npm/select2@4.0.11/dist/js/select2.min.js"></script>
+    <script src="{{ asset('javascripts/add-alias.js') }}"></script>
     <script>
         $(document).ready(function () {
             $('.select2').select2({
