migrate to webpack encore

--- a/templates/dashboard.html.twig
+++ b/templates/dashboard.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block stylesheets %}
-    <link rel="stylesheet" href="{{ asset('styles/dashboard.css') }}">
+    {{ encore_entry_link_tags('dashboard') }}
 {% endblock %}
 
 {% block body %}
@@ -11,4 +11,8 @@
         <h1 id="content_title" class="text-center">{% block content_title %}{% endblock %}</h1>
         <section id="content_body">{% block content_body %}{% endblock %}</section>
     </main>
+{% endblock %}
+
+{% block javascripts %}
+    {{ encore_entry_script_tags('dashboard') }}
 {% endblock %}
