--- a/templates/email/new.html.twig
+++ b/templates/email/new.html.twig
@@ -2,7 +2,7 @@
 
 {% block stylesheets %}
     {{ parent() }}
-    <link href="https://cdn.jsdelivr.net/npm/select2@4.0.11/dist/css/select2.min.css" rel="stylesheet"/>
+    {{ encore_entry_link_tags('add-alias') }}
 {% endblock %}
 
 {% block content_title %}Ajouter un alias{% endblock %}
@@ -34,14 +34,5 @@
 
 {% block javascripts %}
     {{ parent() }}
-    <script src="https://cdn.jsdelivr.net/npm/select2@4.0.11/dist/js/select2.min.js"></script>
-    <script src="{{ asset('javascripts/add-alias.js') }}"></script>
-    <script>
-        $(document).ready(function () {
-            $('.select2').select2({
-                allowClear: true,
-                tags: true
-            });
-        });
-    </script>
+    {{ encore_entry_script_tags('add-alias') }}
 {% endblock %}
