--- a/templates/_components/navbar.html.twig
+++ b/templates/_components/navbar.html.twig
@@ -1,5 +1,5 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="{{ path('email_index') }}">{{ 'site.title' | trans }}</a>
+<nav class="navbar navbar-expand-lg bg-secondary navbar-dark">
+    <a class="navbar-brand atma" href="{{ path('email_index') }}">{{ 'site.title' | trans }}</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -7,20 +7,32 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-                <a class="nav-link" href="{{ path('email_index') }}">{{ 'My aliases' | trans }}</a>
+            <li class="nav-item {% if app.request.requestUri == path('email_index') %}active{% endif %}">
+                <a class="nav-link btn btn-secondary btn-pill mr-sm-2" href="{{ path('email_index') }}">
+                    {{ 'My aliases' | trans }}
+                </a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="{{ path('sync_diff') }}">{{ 'Synchronisation' | trans }}</a>
+            <li class="nav-item {% if app.request.requestUri == path('sync_diff') %}active{% endif %}">
+                <a class="nav-link btn btn-secondary btn-pill mr-sm-2" href="{{ path('sync_diff') }}">
+                    {{ 'Synchronisation' | trans }}
+                </a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="{{ path('export_select') }}">{{ 'Exporting aliases' | trans }}</a>
+            <li class="nav-item {% if app.request.requestUri == path('export_select') %}active{% endif %}">
+                <a class="nav-link btn btn-secondary btn-pill mr-sm-2" href="{{ path('export_select') }}">
+                    {{ 'Exporting aliases' | trans }}</a>
             </li>
         </ul>
+
         <form class="form-inline my-2 my-lg-0" action="{{ path('search_alias') }}" method="get">
-            <input class="form-control mr-sm-2" type="search" name="alias" required
-                   placeholder="Rechercher un alias" aria-label="{{ 'Search alias' | trans }}">
-            <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">{{ 'Search' | trans }}</button>
+            <div class="input-group">
+                <input class="form-control" type="search" name="alias" required
+                       placeholder="Rechercher un alias" aria-label="{{ 'Search alias' | trans }}">
+                <div class="input-group-append">
+                    <button class="btn btn-light my-2 my-sm-0" type="submit">
+                        <i class="fas fa-search"></i>
+                    </button>
+                </div>
+            </div>
         </form>
         <a class="btn btn-danger ml-2" href="{{ path('app_logout') }}">
             <i class="fas fa-sign-out-alt"></i>
