--- a/templates/email/edit.html.twig
+++ b/templates/email/edit.html.twig
@@ -5,19 +5,36 @@
     {{ encore_entry_link_tags('edit-alias') }}
 {% endblock %}
 
-{% block content_title %}Modifier un alias{% endblock %}
+{% block content_title %}
+    {{ "Edit alias" | trans }}
+    <span class="badge badge-light badge-pill">{{ email.alias }}</span>
+{% endblock %}
 
 {% block content_body %}
-    <a href="{{ path('email_index') }}">Revenir en arrière</a>
+    <div class="row">
+        <div class="ml-auto mb-3">
+            <a class="btn btn-sm btn-secondary" href="{{ path('email_index') }}">
+               <i class="fas fa-door-open"></i> {{ "Cancel" | trans }}
+            </a>
+        </div>
+    </div>
     {{ form_start(form) }}
     <div id="select-tags-input" class="form-group" data-tags="{{ email.tags | json_encode }}">
         {{ form_label(form.tags) }}
         {{ form_widget(form.tags) }}
     </div>
-    <button class="btn btn-block btn-primary">Modifier</button>
     {{ form_end(form) }}
+    <div class="row">
+        <div class="col-md-6">
+            {{ include('email/_delete_form.html.twig') }}
+        </div>
+        <div class="col-md-6">
+            <button type="submit" form="{{ form.vars.attr.id }}" class="btn btn-block btn-success">
+                {{ "Edit alias" | trans }}
+            </button>
+        </div>
+    </div>
     <div class="mb-3"></div>
-    {{ include('email/_delete_form.html.twig') }}
 {% endblock %}
 
 {% block javascripts %}
