--- a/templates/sync/diff.html.twig
+++ b/templates/sync/diff.html.twig
@@ -4,8 +4,8 @@
 
 {% block content_body %}
     <form action="{{ path('sync_add') }}" method="post">
-        <table class="table table-hover table-sm">
-            <thead>
+        <table class="table table-hover text-center">
+            <thead class="thead-dark">
             <tr>
                 <th>{{ 'Email' | trans }}</th>
                 <th>{{ 'Alias' | trans }}</th>
