--- a/templates/dashboard.html.twig
+++ b/templates/dashboard.html.twig
@@ -7,9 +7,27 @@
 {% block body %}
     {% include '_components/navbar.html.twig' %}
 
+    {% for label, messages in app.flashes %}
+        {% for message in messages %}
+            <div class="alert alert-{{ label }} alert-dismissible fade show" role="alert">
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+                {{ message }}
+            </div>
+        {% endfor %}
+    {% endfor %}
+
+
+
+
     <main class="container">
-        <h1 id="content_title" class="text-center">{% block content_title %}{% endblock %}</h1>
-        <section id="content_body">{% block content_body %}{% endblock %}</section>
+        <div class="card">
+            <div class="card-header bg-secondary text-white">
+                {% block content_title %}{% endblock %}
+            </div>
+            <div class="card-body">{% block content_body %}{% endblock %}</div>
+        </div>
     </main>
 {% endblock %}
 
