--- a/templates/export/select.html.twig
+++ b/templates/export/select.html.twig
@@ -8,20 +8,27 @@
 {% block content_title %}{{ "Export data" | trans }}{% endblock %}
 
 {% block content_body %}
-    <button class="float-right btn btn-primary mb-2">{{ "Import data" | trans }}</button>
     <form action="{{ path('export_csv') }}" method="post">
-        <table class="table table-striped">
-            <thead>
+        <table class="table table-hover table-borderless text-center">
+            <thead class="thead-dark">
             <tr>
-                <th>{{ "Email" | trans }}</th>
-                <th>{{ "Alias" | trans }}</th>
+                <th class="align-middle">{{ "Email" | trans }}</th>
+                <th class="align-middle">{{ "Alias" | trans }}</th>
                 <th>
-                    <input type="checkbox" name="all-alias" id="select-all-alias" checked>
                     {{ "Export aliases" | trans }}
+                    <label class="switch">
+                        <input type="checkbox" class="custom-control-input all-alias"
+                               id="select-all-alias" checked>
+                        <span class="slider round"></span>
+                    </label>
                 </th>
                 <th>
-                    <input type="checkbox" name="all-tags" id="select-all-tags" checked>
                     {{ "Export tags" | trans }}
+                    <label class="switch">
+                        <input type="checkbox" class="custom-control-input all-tags"
+                               id="select-all-tags" checked>
+                        <span class="slider round"></span>
+                    </label>
                 </th>
             </tr>
             </thead>
@@ -31,10 +38,19 @@
                     <td>{{ alias.target }}</td>
                     <td>{{ alias.alias }}</td>
                     <td>
-                        <input type="checkbox" class="checkbox-alias" name="alias[{{ alias.id }}]" checked>
+                        <label class="switch">
+                            <input type="checkbox" class="custom-control-input checkbox-alias"
+                                   name="alias[{{ alias.id }}]" checked>
+                            <span class="slider round"></span>
+                        </label>
                     </td>
                     <td>
-                        <input type="checkbox" class="checkbox-tags" name="tags[{{ alias.id }}]" checked>
+                        <label class="switch">
+                            <input type="checkbox" class="custom-control-input checkbox-tags"
+                                   name="tags[{{ alias.id }}]" checked>
+                            <span class="slider round"></span>
+                        </label>
+
                     </td>
                 </tr>
             {% endfor %}
