--- a/templates/search/alias.html.twig
+++ b/templates/search/alias.html.twig
@@ -9,10 +9,10 @@
         {% endif %}
         {% for result in results %}
             <li class="list-group-item">
-                {{ result.alias }} <small>(pour {{ result.target }})</small>
-                <a class="badge badge-primary badge-pill float-right"
+                {{ result.alias }} <small>({{ "for" | trans }} {{ result.target }})</small>
+                <a class="btn btn-secondary btn-sm float-right"
                    href="{{ path('email_edit', {id: result.id}) }}">
-                    <i class="fas fa-eye"></i> {{ "see" | trans }}
+                    <i class="fas fa-eye mr-1"></i> {{ "see" | trans }}
                 </a>
             </li>
         {% endfor %}
