--- a/templates/email/index.html.twig
+++ b/templates/email/index.html.twig
@@ -47,5 +47,8 @@
             {% endfor %}
             </tbody>
         </table>
+        <div class="navigation">
+            {{ knp_pagination_render(emails) }}
+        </div>
     </div>
 {% endblock %}
