--- a/templates/export/select.html.twig
+++ b/templates/export/select.html.twig
@@ -35,8 +35,8 @@
             <tbody>
             {% for alias in aliases %}
                 <tr>
-                    <td>{{ alias.target }}</td>
-                    <td>{{ alias.alias }}</td>
+                    <td>{{ alias.realEmail }}</td>
+                    <td>{{ alias.aliasEmail }}</td>
                     <td>
                         <label class="switch">
                             <input type="checkbox" class="custom-control-input checkbox-alias"
