--- a/templates/alias/_delete_form.html.twig
+++ b/templates/alias/_delete_form.html.twig
@@ -1,6 +1,6 @@
-<form method="post" action="{{ path('email_delete', {'id': email.id}) }}"
+<form method="post" action="{{ path('alias_delete', {'id': alias.id}) }}"
       onsubmit="return confirm('{{ 'Are you sure ?' | trans }}');">
     <input type="hidden" name="_method" value="DELETE">
-    <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ email.id) }}">
+    <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ alias.id) }}">
     <button class="btn btn-block btn-danger">{{ "Delete this alias" | trans }}</button>
 </form>
