--- a/templates/search/alias.html.twig
+++ b/templates/search/alias.html.twig
@@ -11,7 +11,7 @@
             <li class="list-group-item">
                 {{ result.alias }} <small>({{ "for" | trans }} {{ result.target }})</small>
                 <a class="btn btn-secondary btn-sm float-right"
-                   href="{{ path('email_edit', {id: result.id}) }}">
+                   href="{{ path('alias_edit', {id: result.id}) }}">
                     <i class="fas fa-eye mr-1"></i> {{ "see" | trans }}
                 </a>
             </li>
