--- a/templates/search/alias.html.twig
+++ b/templates/search/alias.html.twig
@@ -9,11 +9,7 @@
         {% endif %}
         {% for result in results %}
             <li class="list-group-item">
-                {{ result.alias }} <small>({{ "for" | trans }} {{ result.target }})</small>
-                <a class="btn btn-secondary btn-sm float-right"
-                   href="{{ path('alias_edit', {id: result.id}) }}">
-                    <i class="fas fa-eye mr-1"></i> {{ "see" | trans }}
-                </a>
+                {{ result.aliasEmail }} <small>({{ "for" | trans }} {{ result.realEmail }})</small>
             </li>
         {% endfor %}
     </ul>
