--- a/templates/sync/diff.html.twig
+++ b/templates/sync/diff.html.twig
@@ -4,31 +4,33 @@
 
 {% block content_body %}
     <form action="{{ path('sync_add') }}" method="post">
-        <table class="table table-hover text-center">
-            <thead class="thead-dark">
-            <tr>
-                <th>{{ 'Email' | trans }}</th>
-                <th>{{ 'Alias' | trans }}</th>
-                <th>{{ 'Existing on' | trans }}</th>
-                <th class="sr-only">input</th>
-            </tr>
-            </thead>
-
-            <tbody>
-            {% for key, alias in diff %}
-                <tr class={{ alias['exist'] == 'local' ? "table-success" : "table-warning" }}>
-                    <td>{{ alias['email'] }}</td>
-                    <td>{{ alias['alias'] }}</td>
-                    <td>{{ alias['exist'] }}</td>
-                    <td class="sr-only">
-                        <input name="email[{{ key }}]" type="hidden" value="{{ alias['email'] }}">
-                        <input name="alias[{{ key }}]" type="hidden" value="{{ alias['alias'] }}">
-                        <input name="exist[{{ key }}]" type="hidden" value="{{ alias['exist'] }}">
-                    </td>
+        <div class="table-responsive">
+            <table class="table table-hover text-center">
+                <thead class="thead-dark">
+                <tr>
+                    <th>{{ 'Email' | trans }}</th>
+                    <th>{{ 'Alias' | trans }}</th>
+                    <th>{{ 'Existing on' | trans }}</th>
+                    <th class="sr-only">input</th>
                 </tr>
-            {% endfor %}
-            </tbody>
-        </table>
+                </thead>
+
+                <tbody>
+                {% for key, alias in diff %}
+                    <tr class={{ alias['exist'] == 'local' ? "table-success" : "table-warning" }}>
+                        <td>{{ alias['email'] }}</td>
+                        <td>{{ alias['alias'] }}</td>
+                        <td>{{ alias['exist'] }}</td>
+                        <td class="sr-only">
+                            <input name="email[{{ key }}]" type="hidden" value="{{ alias['email'] }}">
+                            <input name="alias[{{ key }}]" type="hidden" value="{{ alias['alias'] }}">
+                            <input name="exist[{{ key }}]" type="hidden" value="{{ alias['exist'] }}">
+                        </td>
+                    </tr>
+                {% endfor %}
+                </tbody>
+            </table>
+        </div>
         <button type="submit" class="btn btn-block btn-success">{{ 'Sync all' | trans }}</button>
     </form>
 {% endblock %}
