--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,7 +18,7 @@
     {{ encore_entry_link_tags('app') }}
     {% block stylesheets %}{% endblock %}
 </head>
-<body>
+<body class="bg-dark">
 {% block body %}{% endblock %}
 
 {{ encore_entry_script_tags('app') }}
