--- a/templates/alias/new.html.twig
+++ b/templates/alias/new.html.twig
@@ -3,22 +3,29 @@
 {% block content_title %}{{ "Add new alias" | trans }}{% endblock %}
 
 {% block content_body %}
-    {{ form_start(form) }}
+    <div class="mt-2">
+        {{ form_start(form) }}
 
-    {{ form_widget(form.realEmail) }}
+        {{ form_widget(form.realEmail) }}
 
-    <div class="input-group mt-3">
-        {{ form_widget(form.aliasEmail) }}
-        <span class="input-group-text" id="input-append-alias">@example.com</span>
-    </div>
-
-    <div class="row mt-3">
-        <div class="col-sm-6">
-            <a class="btn btn-block btn-dark" href="{{ path('alias_index') }}">{{ "Cancel" | trans }}</a>
+        <div class="input-group mt-3">
+            {{ form_widget(form.aliasEmail) }}
+            <span class="input-group-text" id="input-append-alias">@example.com</span>
         </div>
-        <div class="col-sm-6">
-            <button class="btn btn-block btn-success">{{ "Save" | trans }}</button>
+
+        <div class="row mt-3">
+            <div class="col-sm-6">
+                <a class="btn btn-block btn-dark" href="{{ path('alias_index') }}">{{ "Cancel" | trans }}</a>
+            </div>
+            <div class="col-sm-6">
+                <button class="btn btn-block btn-success">{{ "Save" | trans }}</button>
+            </div>
         </div>
+        {{ form_end(form) }}
     </div>
-    {{ form_end(form) }}
+{% endblock %}
+
+{% block javascripts %}
+    {{ parent() }}
+    {{ encore_entry_script_tags('alias-form') }}
 {% endblock %}
